--- a/ETM Subsystem/3. Requirements.md
+++ b/ETM Subsystem/3. Requirements.md
@@ -1,10 +1,10 @@
-#Requirements
+##Requirements
 
 Interface:
 
 Needs a wireless connectivity module interfaced with the ETM
 
-Functional requirements:
+##Functional requirements:
 
 **Wireless capability:** The system must be able to send a wireless signal to the location tracking subsystem every time a ticket is issued
 
