--- a/ETM Subsystem/3. Requirements.md
+++ b/ETM Subsystem/3. Requirements.md
@@ -8,7 +8,7 @@ Needs a wireless connectivity module interfaced with the ETM
 
 **Wireless capability:** The system must be able to send a wireless signal to the location tracking subsystem every time a ticket is issued
 
-Non-functional requirements:
+##Non-functional requirements:
 
 **Speed –** Must be able to issue tickets at a fast rate (available with the existing ETM)
 
