--- a/ETM Subsystem/0. Project Scope.md
+++ b/ETM Subsystem/0. Project Scope.md
@@ -1,9 +1,12 @@
-# Project Scope
+#Work Breakdown structure
 
-Take an existing TNSTC Madurai div. ETM
+| S. No. | **Work** | Sub task 1 | Sub task 2 | Sub task 3 | Sub task 4 |
+| --- | --- | --- | --- | --- | --- |
+| 1 | Take a TNSTC Electronic Ticketing Machine and fit it with wireless capabilities. | Get a TNSTC ETM for rent / for loan / ask to use it for some time / get a spare | Understand how TNSTC ETM works | Study list of IoT wireless connectivity protocols and tabulate their pros &amp; cons – Filter some which are suitable for your application |   |
+|   |   |   | Determine whether the ETM has GSM/GPRS/GPS capabilities | Choose the protocol which is ideal list by priority which are feasible &amp; suitable for your application |   |
+|   |   |   | Check if adding wireless capabilities to the device is feasible | Choose the protocol &amp; capability which is most feasible for application. |   |
+|   |   |   |   |   | Implementation |
 
-Understand how it works
 
-Select suitable wireless protocol for application
 
-Add Wireless capabilities to it
+
