Update 4. Work breakdown structure.md

--- a/ETM Subsystem/4. Work breakdown structure.md
+++ b/ETM Subsystem/4. Work breakdown structure.md
@@ -1,12 +1,14 @@
 #Work Breakdown structure
 
-| S. No. | **Work** | Sub task 1 | Sub task 2 | Sub task 3 | Sub task 4 |
-| --- | --- | --- | --- | --- | --- |
-| 1 | Take a TNSTC Electronic Ticketing Machine and fit it with wireless capabilities. | Get a TNSTC ETM for rent / for loan / ask to use it for some time / get a spare | Understand how TNSTC ETM works | Study list of IoT wireless connectivity protocols and tabulate their pros &amp; cons – Filter some which are suitable for your application |   |
-|   |   |   | Determine whether the ETM has GSM/GPRS/GPS capabilities | Choose the protocol which is ideal list by priority which are feasible &amp; suitable for your application |   |
-|   |   |   | Check if adding wireless capabilities to the device is feasible | Choose the protocol &amp; capability which is most feasible for application. |   |
-|   |   |   |   |   | Implementation |
-
-
-
+| S. No. | Phase | **Work** | Sub task 1 | Sub task 2 | Sub task 3 | Sub task 4 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 1 | Analysis | Take a TNSTC Electronic Ticketing Machine and fit it with wireless capabilities. | Get a TNSTC ETM for rent / for loan / ask to use it for some time / get a spare | Understand how TNSTC ETM works | Study list of IoT wireless connectivity protocols and tabulate their pros &amp; cons – Filter some which are suitable for your application |   |
+|   |   |   |   | Determine whether the ETM has GSM/GPRS/GPS capabilities |   |   |
+|   |   |   |   | Check if adding wireless capabilities to the device is feasible |   |   |
+|   | Design |   |   |   | Choose the protocol which is ideal list by priority which are feasible &amp; suitable for your application |   |
+|   |   |   |   |   | Choose the protocol &amp; capability which is most feasible for application. |   |
+|   | Implementation |   |   |   |   | Develop a basic app with just one button that sends a bluetooth signal to the bluetooth module of the Location tracking module( **Proof of concept** ) |
+|   |   |   |   |   |   | Develop a simple app that simultates the ETM with a Issue ticket button – everything is simulated except no tickets are printed |
+|   |   |   |   |   |   | Learn how to add your wireless capability with existing ETM (consult ECE dept at K univ) |
+|   |   |   |   |   |   | Do it!! |
 
