Update 99. To do.md

--- a/ETM Subsystem/99. To do.md
+++ b/ETM Subsystem/99. To do.md
@@ -1,8 +1,5 @@
 #To do:
 
-### 1) Break the ETM w. Wireless subsystem into smaller capabilities
-
-TNSTC ETM w. Wireless -&gt;  Develop a simple app that simultates the ETM with a Issue ticket button – everything is simulated except no tickets are printed (Good for proof of concept) -&gt; Develop a basic app with just one button that sends a bluetooth signal to the bluetooth module of the Location tracking module.
-
-### 2) Understand how the TNSTC ETM works - &gt; Whether it has GPS / GPRS enabled in it..? + Inner working
+1) Get ETM
+2) Understand how ETM works
 
