Update 4. Work breakdown structure.md

--- a/ETM Subsystem/4. Work breakdown structure.md
+++ b/ETM Subsystem/4. Work breakdown structure.md
@@ -7,7 +7,7 @@
 |   |   |   |   | Check if adding wireless capabilities to the device is feasible |   |   |
 |   | Design |   |   |   | Choose the protocol which is ideal list by priority which are feasible &amp; suitable for your application |   |
 |   |   |   |   |   | Choose the protocol &amp; capability which is most feasible for application. |   |
-|   | Implementation |   |   |   |   | Develop a basic app with just one button that sends a bluetooth signal to the bluetooth module of the Location tracking module( **Proof of concept** ) |
+|   | Implementation & Testing - NOTE: TEST AT EVERY PHASE OF IMPLEMENTATION|   |   |   |   | Develop a basic app with just one button that sends a bluetooth signal to the bluetooth module of the Location tracking module( **Proof of concept** ) |
 |   |   |   |   |   |   | Develop a simple app that simultates the ETM with a Issue ticket button – everything is simulated except no tickets are printed |
 |   |   |   |   |   |   | Learn how to add your wireless capability with existing ETM (consult ECE dept at K univ) |
 |   |   |   |   |   |   | Do it!! |
