Update 2. Use cases or User stories.md

--- a/ETM Subsystem/2. Use cases or User stories.md
+++ b/ETM Subsystem/2. Use cases or User stories.md
@@ -1,6 +1,7 @@
 #Use Cases/User stories
 
 ## Note: I'm leaving out the modify current stop from menu for the 1st iteration
+## I'm also leaving out auto suggest stops based on typing of letters in key pad
 
 **COMMON** : The conductor arrives at Bus Stand /Depot of TNSTC.  The buses are at bus stand/depot. The conductor asks which bus he is assigned to and collects the corresponding ETM from the Branch Manager.  Conductor gets on the bus.
 
