Update 5. Risk Management.md

--- a/A IoT based Passenger Information Subsystem/5. Risk Management.md
+++ b/A IoT based Passenger Information Subsystem/5. Risk Management.md
@@ -20,4 +20,5 @@ Key points about Risk
 | S.No | Risk | Impact | Probability | Total | Mitigation | **Impact** | **Probability** | **Total** |
 | --- | --- | --- | --- | --- | --- | --- | --- | --- |
 | 1 | Not enough money to fund the project  | 5  | 4  | 20  | Freelancer, Upwork  | 3  | 3  | 9  |
+| 2 | Spending too much time in design  | 4  | 5  | 20  | Contact expert regarding choice of vehicle tracking technology asap  | 3  | 3  | 9  |
 
