Update 5.2 Database design.md

--- a/ETM Subsystem/5.2 Database design.md
+++ b/ETM Subsystem/5.2 Database design.md
@@ -1,4 +1,4 @@
-#Database design: (with sample data)
+**#Database design: (with sample data)**
 
 **ETM side:**
 
@@ -14,14 +14,14 @@
 
 **Cloud PaaS side: (need for matching of data)**
 
-| **Bus route No.** | **List of stops on route** | **Ticket Destination List Count** | **Current stop** | **Location (in lat &amp; long)** |
+| **Bus route No.** | **List of stops on route** | **Current stop** | **Ticket Destination List Count** | **Location (in lat &amp; long)** |
 | --- | --- | --- | --- | --- |
-| 16J | Airport |   | Avaniapuram | (37.5,96.9) |
+| 16J | Airport | Avaniapuram |   | (37.5,96.9) |
 |   | Avaniapuram |   |   |   |
-|   | Villapuram | 7 |   |   |
-|   | Therku vassal | 3 |   |   |
-|   | Narimedu | 10 |   |   |
-|   | Krishnapuram Colony | 8 |   |   |
-|   | Thapal Thanthi Nagar | 6 |   |   |
+|   | Villapuram |   | 7 |   |
+|   | Therku vassal |   | 3 |   |
+|   | Narimedu |   | 10 |   |
+|   | Krishnapuram Colony |   | 8 |   |
+|   | Thapal Thanthi Nagar |   | 6 |   |
 
 **Note:** Idea is whenever the current stop gets updated to call a function that removes the count of all the tickets where (destination stop==current stop)
