Update 5.2 Database design.md

--- a/ETM Subsystem/5.2 Database design.md
+++ b/ETM Subsystem/5.2 Database design.md
@@ -16,7 +16,7 @@
 
 | **Bus route No.** | **List of stops on route** | **Current stop** | **Ticket Destination List Count** | **Location (in lat &amp; long)** |
 | --- | --- | --- | --- | --- |
-| 16J | Airport | Avaniapuram |   | (37.5,96.9) |
+| 16J | Airport | Airport |   | (37.5,96.9) |
 |   | Avaniapuram |   |   |   |
 |   | Villapuram |   | 7 |   |
 |   | Therku vassal |   | 3 |   |
