Update 5.2 Database design.md

--- a/ETM Subsystem/5.2 Database design.md
+++ b/ETM Subsystem/5.2 Database design.md
@@ -1,22 +1,22 @@
-**#Database design: (with sample data)**
+#Database design: (with sample data)
 
 **ETM side:**
 
-| **Bus Route No.** | **List of stops on route** | **Current Stop** |
-| --- | --- | --- |
-| 16J | Airport | Airport |
-|   | Avaniapuram |   |
-|   | Villapuram |   |
-|   | Therku vassal |   |
-|   | Narimedu |   |
-|   | Krishnapuram Colony |   |
-|   | Thapal Thanthi Nagar |   |
+| **Bus Route No.** | **List of stops on route** | **Corresponding number on keypad** | **Current Stop** |
+| --- | --- | --- | --- |
+| 16J | Airport | 1 | Airport |
+|   | Avaniapuram | 2 |   |
+|   | Villapuram | 3 |   |
+|   | Therku vassal | 4 |   |
+|   | Narimedu | 5 |   |
+|   | Krishnapuram Colony | 6 |   |
+|   | Thapal Thanthi Nagar | 7 |   |
 
 **Cloud PaaS side: (need for matching of data)**
 
 | **Bus route No.** | **List of stops on route** | **Current stop** | **Ticket Destination List Count** | **Location (in lat &amp; long)** |
 | --- | --- | --- | --- | --- |
-| 16J | Airport | Airport |   | (37.5,96.9) |
+| 16J | Airport | Avaniapuram |   | (37.5,96.9) |
 |   | Avaniapuram |   |   |   |
 |   | Villapuram |   | 7 |   |
 |   | Therku vassal |   | 3 |   |
