Update 99. To do.md

--- a/ETM Subsystem/99. To do.md
+++ b/ETM Subsystem/99. To do.md
@@ -4,3 +4,7 @@
 
 **2) Understand how ETM works**
 
+**3) Set API level for your android studio app to Lvl 24 or so **
+
+**4) Install device in Geny motion with API level of 24 and delete the redundant devices?
+
