--- a/On-board computing subsystem/2. Use cases or User stories.md
+++ b/On-board computing subsystem/2. Use cases or User stories.md
@@ -1,4 +1,28 @@
 # Use Cases
 
-1) The conductor presses OK button, <Current Stop, Destination Stop, Bus Route ID> is sent wirelessly to the Location Tracking Subsystem (on-board computer). The Location Tracking Subsystem receives the Ticket Data (stores in temporary memory?) & sends the data to the server via GSM / GPRS when the on-board computer is not relaying the GPS information (every 10 seconds).
+# Use Cases
 
+OCS - On-board computing Subsystem
+
+Read gsm/gprs as long -range communication mechanism with server.
+
+1) Conductor issues ticket for passenger i.e. The conductor presses OK button, <Current Stop, Destination Stop, Bus Route ID> is sent short- range wirelessly to the OCS (on-board computer). The OCS receives the Ticket Data. It checks the long range wireless module is free or not. The long range wireless module is free and available. The OCS forwards the data to the cloud server via. GSM/GPRS. (long-range wireless communication) over the internet. 
+
+2) Conductor issues ticket for passenger i.e. The conductor presses OK button, <Current Stop, Destination Stop, Bus Route ID> is sent short- range wirelessly to the OCS (on-board computer). The OCS receives the Ticket Data. It checks the long range wireless module is free or not. The long range wireless module is NOT free. The received data is stored in temporary memory and polls the GSM/GPRS device to check that its free. When its free, the OCS forwards the data to the cloud server via. GSM/GPRS. (long-range wireless communication) over the internet using Cloud API Ticket Send method.
+
+3) For every 10 seconds,
+The OCS receives the GPS information from the satellites. There are 3-4 satellites available from the current location which enables our GPS receiver to get a fix on the location with an acccuracy of within 15 meters. The information received from the gps receiver is forwarded to the microcontroller. The Microcontroller checks whether the GSM/GPRS module is free and available. The module is free. The microcontroller transmits the GPS info to the server using Cloud API GPS Send method.
+
+4) For every 10 seconds,
+The OCS receives the GPS information from the satellites. There are 3-4 satellites available from the current location which enables our GPS receiver to get a fix on the location with an acccuracy of within 15 meters. The information received from the gps receiver is forwarded to the microcontroller. The Microcontroller checks whether the GSM/GPRS module is free and available. The module is NOT free. The gps data is stored in temporary memory and polls the GSM/GPRS till its free. When its free, the micro-controller sends gps info to the GSM/GPRS module transmits the GPS info to the server using Cloud API GPS Send method.
+
+
+Decisions:
+
+Short range for my application
+
+Long range for my application
+
+Temporary memory
+
+Synchronization between the 3 modules.
