Update 2. Use cases or User stories.md

--- a/On-board computing subsystem/2. Use cases or User stories.md
+++ b/On-board computing subsystem/2. Use cases or User stories.md
@@ -17,6 +17,14 @@ The OCS receives the GPS information from the satellites. There are 3-4 satellit
 The OCS receives the GPS information from the satellites. There are 3-4 satellites available from the current location which enables our GPS receiver to get a fix on the location with an acccuracy of within 15 meters. The information received from the gps receiver is forwarded to the microcontroller. The Microcontroller checks whether the GSM/GPRS module is free and available. The module is NOT free. The gps data is stored in temporary memory and polls the GSM/GPRS till its free. When its free, the micro-controller sends gps info to the GSM/GPRS module transmits the GPS info to the server using Cloud API GPS Send method.
 
 
+Note: / Risks:
+
+1. The GPS info and the ETM info is received at the same time or sent to the microcontroller at the same time. So, the microcontroller should be polled in a fashion similar to the GSM/GPRS module??
+
+2.
+3.
+
+
 Decisions:
 
 Short range for my application
