Update 99. To do.md

--- a/ETM Subsystem/99. To do.md
+++ b/ETM Subsystem/99. To do.md
@@ -1,10 +1,12 @@
 #To do:
 
-**1) Get ETM**
+DO NOW!!!
 
-**2) Understand how ETM works**
+Google that & read ... (covers the android side of interface)
 
-**3) Set API level for your android studio app to Lvl 24 or so **
+passing JSON object from android to server
 
-**4) Install device in Geny motion with API level of 24 and delete the redundant devices?
+You now need to cover the server side of Receiving JSON object.
+
+
 
