--- a/ETM Subsystem/99. To do.md
+++ b/ETM Subsystem/99. To do.md
@@ -2,11 +2,39 @@
 
 DO NOW!!!
 
+### "passing JSON object from android to server"
+
 Google that & read ... (covers the android side of interface)
 
-passing JSON object from android to server
+1. POST methods:
+
+i. gps data: (get at ETM side)
+ii. ticket info (bus route no, current stop, destination stop)  // Just collect these 3 at your ETM side.
+
+Get all of the above separately - finally after pressing OK button,
+
+Put all of that into a JSON object dynamically... and send it to server.
+
+
+### Server:
 
 You now need to cover the server side of Receiving JSON object.
 
+Define API with 2 functions:
+
+// Start Small. - send the gps data initially along with the ticket
+
+1. GET methods:
+
+i. gps data:
+ii. ticket info (bus route no, current stop, destination stop)  // Just collect these 3 at your ETM side.
+
+Get a JSON object - than put all of that into the database....! :)
+
+// Do SERVER SIDE PROCESSING - Ticket information - calculate the no of LIVE tickets...
+
+2. POST methods:  (Do you Need to specify a POST method in your API??)
+
+Get the LIVE tickets and send it back either as a string or a JSON object to the android app.
 
 
