Update 2. Use cases or User stories.md

--- a/Cloud PaaS Server Subsystem/2. Use cases or User stories.md
+++ b/Cloud PaaS Server Subsystem/2. Use cases or User stories.md
@@ -2,6 +2,8 @@
 
 **NOTE: I&#39;m skipping callback the KEY feature of Javascript for now…v 0.0.1**
 
+**Note: The database design for the cloud server is similar to ETM ** 
+
 1. 1)An ETM (Electronic Ticketing Machine) sends the GPS co-ordinates in the form of a JSON object – with key-value pairs of latitude and longitude to the server via a HTTP Post request (alternatives checking) – every 10 seconds.
 2. 2)The same ETM sends some ticket information on okButtonClick by conductor. A JSON object consisting of key-value pairs of {Bus Route ID, Current stop, Destination stop} is dynamically created and sent to cloud server IP that is listening on a specific port number. The okbuttonClick does NOT occur at the same time of gps sending
 3. 3)Scenario 2 but the okbuttonClick occurs at the same time of gps sending – the gps sending thread is blocked for one second and sent immediately after the okbuttonClick information is sent to server.
