Update 5.2 Database design.md

--- a/ETM Subsystem/5.2 Database design.md
+++ b/ETM Subsystem/5.2 Database design.md
@@ -26,4 +26,10 @@
 
 **Note:** Idea is whenever the current stop gets updated to call a function that removes the count of all the tickets where (destination stop==current stop)
 
-s
+One more route:
+
+ 
+15C
+Periar
+Therkuvasal, Theppakulam, Viraganoor Ring Road, Silaiman
+Keeladi
