Update 2. Use cases or User stories.md

--- a/Cloud PaaS Server Subsystem/2. Use cases or User stories.md
+++ b/Cloud PaaS Server Subsystem/2. Use cases or User stories.md
@@ -4,8 +4,38 @@
 
 **Note: The database design for the cloud server is similar to ETM ** 
 
-1. 1)An ETM (Electronic Ticketing Machine) sends the GPS co-ordinates in the form of a JSON object – with key-value pairs of latitude and longitude to the server via a HTTP Post request (alternatives checking) – every 10 seconds.
-2. 2)The same ETM sends some ticket information on okButtonClick by conductor. A JSON object consisting of key-value pairs of {Bus Route ID, Current stop, Destination stop} is dynamically created and sent to cloud server IP that is listening on a specific port number. The okbuttonClick does NOT occur at the same time of gps sending
-3. 3)Scenario 2 but the okbuttonClick occurs at the same time of gps sending – the gps sending thread is blocked for one second and sent immediately after the okbuttonClick information is sent to server.
-4. 4)A separate thread is calculating the live ticket (crowd) information every time ticket information is received. NOTE: Everything is done on a single thread in javascript – so same thread…
-5. 5)The Track My Bus android app client sends a request with Bus route ID. The Live Ticket information (crowd ) along with the latitude , longitude is composed as a JSON object dynamically &amp; it is sent to the client app
+
+
+# User stories:
+
+**Initial** : The cloud database is not populated **i.e. empty**.
+
+**NOTE** :
+
+i. You don&#39;t know whether gps or ticket info will be sent first so have update for both (?)
+
+ii. NEW Route No =&gt; New collection
+
+OLD / Existing Route No =&gt; Update existing ..
+
+
+
+**Web service** = Right Methods + putting it on the web
+
+1. The first ETM is activated. 10 seconds after activation, it sends its GPS co-ordinates to the server via HTTP post. (The server side must have a method to handle this). The server http gets the data sent by the client in the req(?) object &lt; **Route No, Latitude, Longitude** &gt; and stores it in the mongo database under the corresponding collection, corresponding to the route number.
+
+2. A second ETM is activated. 10 seconds after activation, it sends its GPS co-ordinates to the server via HTTP post. The server http gets the data sent by the client in the req (?) object &lt; **Route No, Latitude, Longitude** &gt; and stores it in the mongo database under a different collection. (routeNo is unique for each bus) corresponding to the route number.
+
+3.  The conductor on the first ETM issues a ticket for a passenger. The ticket information &lt; **Route No, Current Stop, Destination Stop** &gt; is sent via HTTP Post to the server. The sending does not conflict with the loop sending gps info every 10 seconds.
+
+4.  The conductor on the first ETM issues a ticket for a passenger. The ticket information &lt; **Route No, Current Stop, Destination Stop** &gt; is sent via HTTP Post to the server. The sending DOES conflict with the loop sending gps info every 10 seconds. Let the gps data go first &amp; send next (?)
+
+5. The conductor on second / **new ETM** sends his ticket info. A new collection is created on mongodb for his ticket.
+
+6. The first ETM (existing) sends another ticket information to the web server. Since a ticket with that route no is already available – the server merely updates the existing ticket, If its a new route no, the server creates a new collection (ticket) for it.
+
+7. The Track My Bus android app client sends a request with a Bus Route No using HTTP Post &lt;Route No&gt;. The server gets the data in its req object. The data is used to &quot;query&quot; the mongodb and return the ticket info for that bus as an array ticketlist[] = db.collection.find.Array(); A length variable is used to calculate the number of tickets as var len = ticketlist.length; The latitude and longitude of the bus is also &quot;queried&quot;. And the gps co-ordinates are sent back to the android app where they are plotted on google maps.
+
+8. Every time the conductor presses the UP/DOWN button the current Stop Information is updated using HTTP post on the server. The server gets it by getting it using req object. In response to this a method is called that deletes the &quot;dead&quot; tickets which have destinationStop matching. Thus, live ticket list count is maintained.
+
+
