Update 2. Use cases or User stories.md

--- a/ETM Subsystem/2. Use cases or User stories.md
+++ b/ETM Subsystem/2. Use cases or User stories.md
@@ -19,6 +19,8 @@
 
 1. Conductor enters &amp; re-enters the To: field information incorrectly several times. The conductor presses the Menu button which shows the mapping of destination stops to numbers on the keypad. Conductor presses the UP &amp; DOWN arrows to navigate the menu. Conductor presses the back button to go back to the From: To: Ticket issuing page. This time the conductor presses the right number. Presses enter button which issues ticket and sends the 3 parameters (Route No, Destination Stop for that ticket, Current Stop) to the location tracking subsystem.
 
+1. After activating the ETM machine, the ETM continually gets the device co-ordinates every 10 seconds and outputs the <latitude,longitude> as a Toast message.
+
 1. After completing the scheduled number of trips (to &amp; back) the conductor (may have changed) returns to the depot/bus stand – powers off the ETM machine.
 
 
